--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Natural disasters through quotes
+description: Raphael Marietan, Amine Ahmed Ghariani, Luca Bracone, Omid Karimi
