--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-cayman
 title: Natural disasters through quotes
 description: Raphael Marietan, Amine Ahmed Ghariani, Luca Bracone, Omid Karimi
